# cppchess_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  chess.hpp  eval.cpp  eval.h  eval.hpp  main.cpp  move_ordering.cpp  move_ordering.hpp  movepick.cpp  movepick.hpp  patterns.cpp  patterns.h  pawns.cpp  pawns.h  pieces.cpp  pieces.h  search.cpp  search.h  search.hpp  sf_eval.cpp  t.h  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  uci.cpp  uci.h  uci.hpp  ucioptions.cpp  ucioptions.hpp
src/: .depend  Makefile  README.md  bitboard.h  chess.hpp  evaluate.cpp  main.cpp  memory.cpp  memory.h  misc.h  movepick.cpp  movepick.hpp  position.h  search.cpp  search.h  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  types.h  uci.cpp  uci.hpp  ucioptions.cpp  ucioptions.hpp
src/nnue/: nnue_common.h
src/nnue/features/: half_ka_v2_hm.h
